# shell-database

./: .gitignore  CHANGELOG.md  Makefile  README.md  dev-requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
.github/: CODEOWNERS  pull_request_template.md
scripts/: shdb
shell_database/: __init__.py  __main__.py  shdb.py
shell_database/store/: __init__.py  encryption.py  store.py
tests/: test_shell_database.py
