[tool.poetry]
name = "shell-database"
version = "0.1.0"
description = "A key value store for the shell"
authors = ["José Coelho <camilocoelho93@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
sqlitedict = "^1.7.0"
click = "^7.1.2"
fuzzywuzzy = "^0.18.0"
cryptography = "^3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
shdb = "shell_database.shdb:cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
