[metadata]
name = shell_database
version = attr: shell_database.__version__
author = José Coelho
home-page = https://github.com/jcoelho93/shell-database
description = A key value store for the terminal
long-description = file: README.md
long_description_content_type = text/markdown
platform = any
classifiers =
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules
setup_requires =
    setuptools
install_requires =
    {install_requires}

[options]
include_package_data = true
python_requires = >= 3.8*
test_suite = tests

[bdist_wheel]
python-tag = py3

[check]
metadata = true
restructuredtext = true

[sdist]
formats = zip, gztar

[tool:pytest]
junit_family=xunit2

[flake8]
exclude = .git,__pycache__,build,dist,__init__.py
max-line-length = 110
max-complexity = 10

[coverage:run]
omit =
    */__init__.py